fix problem on the global search template where the footer covers some of the results

--- a/resources/gato-template-txstate2015/css/_globalsearch.scss
+++ b/resources/gato-template-txstate2015/css/_globalsearch.scss
@@ -1,4 +1,5 @@
 #search-results.global {
+  overflow: hidden;
   padding: 4rem 0;
 
   &.web {
